--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
   <p> My name is Tanaka Moloi</p>
   <p> Welcome to my personal website</p>
+   <p> I love Web development </p>
 </body>
 </html>
